--- a/docker-ingress/composefile.yml
+++ b/docker-ingress/composefile.yml
@@ -1,23 +1,36 @@
 services:
-  docker-ingress:
+  nginx-proxy:
     image: nginxproxy/nginx-proxy
+    container_name: nginx-proxy
     restart: always
     volumes:
       - certs:/etc/nginx/certs:ro
+      - conf:/etc/nginx/conf.d
+      - html:/usr/share/nginx/html
+      - vhost:/etc/nginx/vhost.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
     ports:
       - 80
+      - 443
+
   acme-companion:
-    user: ${STACK_HOST_UID:-1000}:${STACK_HOST_GID:-1000}
     image: nginxproxy/acme-companion
+    container_name: nginx-proxy-acme
     restart: always
     environment:
       ACME_CA_URI: ${ACME_CA_URI:-https://acme-staging-v02.api.letsencrypt.org/directory}
       DEFAULT_EMAIL: ${LETSENCRYPT_EMAIL}
+      DEFAULT_HOST: ${LETSENCRYPT_HOST}
+    volumes_from:
+      - nginx-proxy
     volumes:
-      - certs:/etc/nginx/certs:rw
       - acme:/etc/acme.sh
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+
 volumes:
-  certs:
   acme:
+  certs:
+  conf:
+  html:
+  vhost:
