--- a/docker-ingress/composefile.yml
+++ b/docker-ingress/composefile.yml
@@ -1,8 +1,12 @@
 services:
   nginx-proxy:
     image: nginxproxy/nginx-proxy
+    user: ${STACK_HOST_UID:-1000}:${STACK_HOST_GID:-1000}
     container_name: nginx-proxy
     restart: always
+    environment:
+      HTTP_PORT: 1080
+      HTTPS_PORT: 10443
     volumes:
       - certs:/etc/nginx/certs:ro
       - conf:/etc/nginx/conf.d
@@ -10,11 +14,12 @@ services:
       - vhost:/etc/nginx/vhost.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
     ports:
-      - 80
-      - 443
+      - "80:1080"
+      - "443:10443"
 
   acme-companion:
     image: nginxproxy/acme-companion
+    user: ${STACK_HOST_UID:-1000}:${STACK_HOST_GID:-1000}
     container_name: nginx-proxy-acme
     restart: always
     environment:
